name:                disclosure
version:             0.1.0.0
-- synopsis:            
-- description:         
homepage:            https://github.com/obscurans/disclosure
license:             GPL-3
license-file:        LICENSE
author:              Jeffrey Tsang
maintainer:          jeffrey.tsang@ieee.org
copyright:           Copyright (C) 2016 Jeffrey Tsang
-- category:            
build-type:          Simple
cabal-version:       >= 1.10

library
  exposed-modules:     Disclosure.Base.Util, Disclosure.Base.Bid, Disclosure.Base.Range, Disclosure.Base.Range.Internal, Disclosure.Base.CompoundRange, Disclosure.Base.CompoundRange.Internal
  -- other-modules:       
  build-depends:       base >= 4.6 && < 5, tuples-homogenous-h98 == 0.1.*, xml == 1.3.*, tuple == 0.3.*
  hs-source-dirs:      src
  ghc-options:         -W
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4 && < 5, tasty == 0.11.*, tasty-hunit == 0.9.*, tasty-quickcheck == 0.8.*, tasty-smallcheck == 0.8.*, smallcheck == 1.1.*, disclosure
  default-language:    Haskell2010
